fix menu spacing

--- a/_sass/main_nav.scss
+++ b/_sass/main_nav.scss
@@ -5,7 +5,7 @@
 #main-nav > ul > li {
   position: relative;
   display: inline-block;
-  padding: 8px 12px;
+  padding: 8px 4px;
   text-transform: uppercase
 }
 
